[package]
name = "hashi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"
rayon = "1.5.0"

hash-ast = { git = "https://github.com/hash-org/hashc.git" }
hash-pipeline = { git = "https://github.com/hash-org/hashc.git" }
hash-reporting = { git = "https://github.com/hash-org/hashc.git" }
hash-session = { git = "https://github.com/hash-org/hashc.git" }
hash-source = { git = "https://github.com/hash-org/hashc.git" }
hash-utils = { git = "https://github.com/hash-org/hashc.git" }

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = [
  "precommit-hook",
  "run-for-all",
  "run-cargo-test",
  "run-cargo-fmt",
  "run-cargo-clippy",
]
